(coq.theory
 (name Proofs)
 (modules
    Counter VerifyCounter
    Refs VerifyRefs
    List_set_at_ind_new Verify_list_set_at_ind_new
    Seq_to_array_old Verify_seq_to_array_old
    MinMaxPlus VerifyMinMaxPlus
    ))


(rule
 (target Refs.v)
 (deps ../lib/refs.ml)
 (action (run cfmlc -o ./Refs.v ../lib/refs.ml))
)



(rule
 (target List_set_at_ind_new.v)
 (deps ../lib/list_set_at_ind_new.ml)
 (action (run cfmlc -o ./List_set_at_ind_new.v ../lib/list_set_at_ind_new.ml))
)

(rule
 (target Seq_to_array_old.v)
 (deps ../lib/seq_to_array_old.ml)
 (action (run cfmlc -o ./Seq_to_array_old.v ../lib/seq_to_array_old.ml))
)

(rule
 (target Counter.v)
 (deps ../lib/counter.ml)
 (action (run cfmlc -o ./Counter.v ../lib/counter.ml))
)

(rule
 (target MinMaxPlus.v)
 (deps ../lib/min_max_plus.ml)
 (action (run cfmlc -o ./MinMaxPlus.v ../lib/min_max_plus.ml))
)

